request atarken thread eklendi (?)
23.01
Şirketin iş ilanlarını görünleyebileceği sayfa eklendi
iş ilanı listeleme sayfasına iş silebilme özelliği eklendi.
24.01
apiden veri gelmemesi durumunda oluşacak hata önlendi ve geçici olarak hata mesajı eklendi.
iş sayfası boşsa ilanınız bulunmamaktadır uyarısı eklendi.
navbar gölge eklenerek beyaz arka plandan öne çıkarıldı.
silme butonu revize edildi
25-27.01
ilan oluşturma sayfası yapına başlandı (bitti sayılır)
çeşitli düzenlemeler yapıldı
singleton yapısı eklendi
yeni componentler oluşturuldu
28.01
iller apiden çekildi (cliente yüklenilmesinin önününe geçildi)
dropdown componenti oluşturuldu.
genişleyen text input alanı oluşturuldu böylece kullanıcı giriş yaparken daha net şekilde okuyabilecek.

29.01
dropdown boyutları ayarlandı
para birimleri eklendi
içerik verileri alındı
genişleyen textfield düzenlendi
para birimi seçeneği eklendi
şirketler artık iş ilanı oluşturabiliyor.
30.01
kodlar düzenlendi
textfield hatası giderildi
null value ve ücret bilgisi yoksa| simgesi kaldırıldı
iş ilanı girildiğinde build çalışmıyordu, iş ilanı girilince artık çalışıyor.split işleminden sonra değer nullsa ekrana eklenmesi önlenildi
aynısı ücret işlemi için de gerçekleştirildi

02.02 
kayıt etme işlemini onaylıyor musunuz butonu eklendi
boş geçilmeyecek değerler ayarlandı"ilanı oluşturmak istediğinize emin misiniz" popupu eklendi
her türlü değer dönmesi için sayfa willpopscope ile kontrol edilecek. null değer dönüyor
boş yetenek artık ayırt ediliyor
yetenekler kısmında sınırsız boşluk bırakma durumu kaldırıldı
şehir bilgisi eklenecek
para birimi seçilmediği durumda defauld olarak türk lirası eklendi
şehir bilgisindeki tüm karakterler büyük olarak ekrana yazdırma sorunu çözüldü
maaş bilgisindeki text input type düzenlendi

YAPILACAKLAR
yeteneklerde tekrarlamaya sebep olan hata giderilecek
'ilanlarım' kısmındaki kart boyutu ve yazı boyutu arttırılacak o kısımdaki yeteneklerin boyutu ve font size arttırılacak


