@@ -7,8 +7,6 @@ import 'package:hrapp/product/widgets/app_bar_logo.dart';
 import 'package:hrapp/product/widgets/sub_title.dart';
 import 'package:hrapp/product/widgets/text_field/custom_text_field.dart';
 import '../../../product/constant/icons.dart';
-import '../../../product/models/company_model/company_model.dart';
-import '../../../product/models/job_model/job_model.dart';
 import '../../../product/widgets/costom_dropdown.dart';
 import 'company_create_advert_view_model.dart';
 
@@ -51,42 +49,7 @@ class _CompanyCreateJobViewState extends CompanyCreateJobViewModel {
             ),
             actions: [
               IconButton(
-                onPressed: () async {
-                  initController();
-                  if (jobTitle == "" || val == null || level == "" || timing == "") {
-                    nav.alert(
-                      context,
-                      StringData.missing,
-                      StringData.missingText,
-                    );
-                    return;
-                  }
-                  bool? check = false;
-
-                  check = await nav.checkDialog(context, StringData.checkTitle, StringData.checkText);
-                  if (check ?? false) {
-                    var data = Company(
-                      companyName: "PAÜ",
-                      sector: "Yazılım",
-                      jobs: Jobs(
-                        isSaveJob: false,
-                        jobTitle: jobTitle,
-                        skills: skills,
-                        lowerWage: upperAndLowerWage?[0] != null ? double.parse(upperAndLowerWage?[0]) : null,
-                        upperWage: upperAndLowerWage?[1] != null ? double.parse(upperAndLowerWage?[1]) : null,
-                        timing: timing,
-                        currency: currencyValue,
-                        level: level,
-                        province: provinceValue,
-                      ),
-                    );
-                    setState(() {
-                      widget.advertRepo?.adverts.add(data);
-                    });
-                    debugPrint('kaydedildi');
-                  }
-                  debugPrint(check.toString());
-                },
+                onPressed: saveAdvert,
                 icon: const Icon(MyIcons.confirm),
               ),
             ],
